--- a/frontend/src/components/Costs/Costs.scss
+++ b/frontend/src/components/Costs/Costs.scss
@@ -1,5 +1,5 @@
 .container {
-  max-width: 1200px;
+  max-width: 1350px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,8 +15,8 @@
   .container-item {
     background-color: #fff;
     border-radius: 10px;
-    width: 250px;
     padding: 0.8rem;
+    width: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,18 +46,32 @@
       }
     }
     h3 {
-      font-size: 1.4rem;
+      font-size: 1.3rem;
+      margin-top: 0.2rem;
       @media (max-width: 250px) {
         font-size: 1rem;
       }
     }
 
+    .description-container {
+      overflow: hidden;
+      opacity: 0;
+      transform: scaleY(0);
+      transform-origin: top;
+      transition: opacity 0.3s ease, transform 0.3s ease;
+
+      &.visible {
+        margin-top: 0.5rem;
+        opacity: 1;
+        transform: scaleY(1);
+      }
+    }
+
     .edit-del {
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      width: 40%;
-      gap: 2rem;
+      width: 100%;
       margin-top: 0.3rem;
       @media (max-width: 620px) {
         width: 100%;
@@ -92,7 +106,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: .6rem;
+        gap: 0.6rem;
         flex-direction: column;
         background-color: #ccc;
         border-radius: 10px;
@@ -129,7 +143,7 @@
         .custom-datepicker {
           width: 370px;
 
-          @media(max-width: 420px) {
+          @media (max-width: 420px) {
             width: 100%;
           }
         }
